sdo/eclipselink.sdo.test/resource/org/eclipse/persistence/testing/sdo/helper/classgen/invalidtypename/org/example/InvalidClassname.java
package org.example;

public interface InvalidClassname {

   public java.util.List getEmail();

   public void setEmail(java.util.List value);

   public java.util.List getPhone();

   public void setPhone(java.util.List value);

   public java.lang.String getCustID();

   public void setCustID(java.lang.String value);


}

